Corrected title animation on mobile

--- a/Resources/index.css
+++ b/Resources/index.css
@@ -2,12 +2,13 @@
     text-align: center;
     margin-top: 50px;
     opacity: 0;
-    min-width: 280px;
+    min-width: 100%;
     position: fixed;
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     transition: opacity 2s ease 1s, transform 2s ease 4s, top 2s ease 4s;
+    border: 1px solid red
 }
 
 #title>h1 {
