--- a/Resources/main.css
+++ b/Resources/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Bebas Neue', cursive;
+    font-family: 'Bebas Neue', 'Arial', cursive;
     color: white;
     font-size: 3rem;
     letter-spacing: 0px;
